fix sponsor logo alignment

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ html[data-bs-theme='light'] .logo-light {
     margin: 10px;
     padding: 5px;
     align-content: center;
+    vertical-align: middle;
 }
 
 .supporter-logo > li img {
